# CodeGlance

./: .gitignore  LICENSE  README.md  REFACTOR_PLAN.md  pyproject.toml
.claude/skills/codebase-map/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
.understand-anything/: fingerprints.json  knowledge-graph.html  knowledge-graph.json  meta.json
brand/: README.md
docs/: AGENT_CONTEXT.md  COMPETITIVE_AUDIT.md  COMPETITIVE_SUPERSET_PLAN.md  GLANCE_WALKTHROUGH.md  INTEGRATIONS.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  STRUCTURE.md  UNDERSTAND_ANYTHING_GAP_PLAN.md
examples/canvas-cli/: README.md  pyproject.toml
examples/canvas-cli/canvas_cli/: __init__.py  __main__.py  cli.py  commands.py  models.py  palette.py  renderer.py
examples/canvas-cli/tests/: test_renderer.py
examples/flaskapp/: README.md  app.py  config.py  extensions.py  models.py
examples/flaskapp/blueprints/: auth.py  blog.py
examples/flaskapp/templates/: base.html  index.html
examples/java-service/: README.md
examples/microservices/: README.md
examples/microservices/services/cart/: cart.py
examples/microservices/services/catalog/: catalog.py
examples/microservices/services/gateway/: gateway.py
examples/microservices/services/notifications/: notifications.py
examples/microservices/services/orders/: orders.py
examples/microservices/services/payments/: payments.py
examples/microservices/services/recommendations/: recommendations.py
examples/microservices/services/shipping/: shipping.py
examples/rust-cli/: Cargo.toml  README.md
examples/rust-cli/src/: config.rs  lib.rs  main.rs  report.rs
examples/taskman/: README.md  requirements.txt
examples/taskman/.understand-anything/: fingerprints.json  knowledge-graph.json  meta.json
examples/taskman/app/: __init__.py  config.py  db.py  main.py  models.py  routes.py
examples/taskman/tests/: test_routes.py
examples/terraform-aws/: README.md  main.tf  outputs.tf  variables.tf
examples/terraform-aws/.understand-anything/: fingerprints.json  knowledge-graph.json  meta.json
examples/terraform-aws/modules/network/: main.tf  variables.tf
examples/terraform-azure/: README.md  main.tf  outputs.tf  variables.tf
examples/terraform-azure/modules/app/: main.tf  outputs.tf  variables.tf
examples/terraform-azure/modules/network/: main.tf  outputs.tf  variables.tf
examples/wiki/: attention.md  embeddings.md  index.md  training.md  transformers.md
src/codeglance/: __init__.py  __main__.py  api.py  cli.py  config.py  enums.py  fingerprint.py  graph.py  i18n.py  ignore.py  layout.py  models.py  output.py  scan.py  schema.py  serve.py
src/codeglance/analyze/: base.py  layers.py  llm.py  pipeline.py  registry.py  tour.py  ts_core.py
src/codeglance/analyze/languages/: __init__.py  c.py  cpp.py  csharp.py  generic.py  go.py  java.py  javascript.py  kotlin.py  lua.py  php.py  (+5 more)
src/codeglance/ask/: __init__.py  models.py  render.py  retrieval.py
src/codeglance/cli/: __init__.py  main.py  parser.py
src/codeglance/commands/: __init__.py  agents.py  analyze.py  ask.py  common.py  competitive.py  generate.py  init.py  processes.py  serve.py  workflows.py
src/codeglance/integrations/: __init__.py  install.py  models.py  registry.py  templates.py
src/codeglance/models/: __init__.py  constants.py  graph.py
src/codeglance/output/: __init__.py  generate.py  index.py  llm.py  profiles.py  toon.py
src/codeglance/processes/: __init__.py
src/codeglance/render/: __init__.py  config.py  context.py  static.py  template.py  wiki.py  workflows.py
src/codeglance/services/: __init__.py  projects.py
src/codescape/: __init__.py  __main__.py  cli.py  fingerprint.py  graph.py  ignore.py
src/codescape/analyze/: llm.py  structural.py
src/codescape/render/: static.py
src/scopinglang/: __init__.py  __main__.py  cli.py  fingerprint.py  graph.py  ignore.py  layout.py  schema.py
src/scopinglang/analyze/: llm.py  structural.py  treesitter.py  ts_core.py
src/scopinglang/render/: __init__.py  icons.py  static.py  template.py
src/understand_anything/: __init__.py  __main__.py  cli.py  fingerprint.py  graph.py  ignore.py  layout.py  scan.py  schema.py
src/understand_anything/analyze/: __init__.py  imports.py  layers.py  llm.py  structural.py  tour.py  treesitter.py
src/understand_anything/render/: __init__.py  static.py  template.py
tests/: test_ask.py  test_cli_foundations.py  test_i18n.py  test_integrations.py  test_processes.py  test_smoke.py
tests/fixtures/imports/: Main.java  app.cpp  lib.h  main.go  main.rs  util.rs
tests/fixtures/legacy/: Lib.hs  alu.sv  calc.adb  calc.jl  counter.vhd  hello.cob  lib.ml  main.tf  mathmod.f90  token.sol  widget.dart
tests/fixtures/multilang/: Program.cs  Server.java  app.js  helper.js  index.php  lib.rs  main.go  model.rb  script.lua  service.ts  util.cpp
(+29 files in other folders)
