[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeglance"
version = "0.1.0"
description = "Turn any codebase into an interactive knowledge graph you can open as a single HTML file. Pure-Python port of Understand-Anything."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "joselrnz" }]
keywords = ["codebase", "knowledge-graph", "visualization", "static-analysis", "documentation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
]

# One `pip install` gets everything: 50+ languages (tree-sitter) + layer detection (networkx).
# All are pure-pip wheels — no Node, no npm, no compiler, no build step.
dependencies = [
    "networkx>=3.1",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
]

[project.optional-dependencies]
# Optional LLM enrichment of summaries / layer names / tour narratives.
llm = ["anthropic>=0.40"]
# Faster force-directed layout for very large graphs.
fast = ["numpy>=1.24"]
all = ["anthropic>=0.40", "numpy>=1.24"]

[project.scripts]
codeglance = "codeglance.cli:main"

[project.urls]
Homepage = "https://github.com/Lum1104/Understand-Anything"

[tool.hatch.build.targets.wheel]
packages = ["src/codeglance"]
