[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeglance"
version = "0.0.4"
description = "Turn any codebase into an interactive knowledge graph, a readable docs wiki, or a dependency map for AI agents — pure Python, single self-contained files, no server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CodeGlance" }]
keywords = ["codebase", "knowledge-graph", "visualization", "static-analysis", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# One `pip install` gets everything: 50+ languages (tree-sitter) + layer detection (networkx).
# All are pure-pip wheels — no Node, no npm, no compiler, no build step.
dependencies = [
    "networkx>=3.1",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
]

[project.optional-dependencies]
# Optional LLM enrichment of summaries / layer names / tour narratives.
llm = ["anthropic>=0.40"]
# Faster force-directed layout for very large graphs.
fast = ["numpy>=1.24"]
all = ["anthropic>=0.40", "numpy>=1.24"]

[project.scripts]
codeglance = "codeglance.cli:main"

[tool.hatch.build]
exclude = [
    "/.codeglance",
    "/.pytest_cache",
    "/.ruff_cache",
    "/dist",
    "/tmp-codeglance",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codeglance"]
